docs: add documentation for Delete Opening
