# handler/response.go
@@ -5,10 +5,11 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/graciani23/goopportunities/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
-	ctx.Header("Content-Type", "application/json")
+	ctx.Header("Content-type", "application/json")
 	ctx.JSON(code, gin.H{
 		"message":   msg,
 		"errorCode": code,
@@ -16,9 +17,24 @@ func sendError(ctx *gin.Context, code int, msg string) {
 }
 
 func sendSuccess(ctx *gin.Context, op string, data interface{}) {
-	ctx.Header("Content-Type", "application/json")
+	ctx.Header("Content-type", "application/json")
 	ctx.JSON(http.StatusOK, gin.H{
-		"message": fmt.Sprintf("operation from handler %s was successful", op),
+		"message": fmt.Sprintf("operation from handler: %s successfull", op),
 		"data":    data,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
